--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@ Hallo, toll, dass Ihr auf meiner Website seid. Ich bin Jannis und bin 15 Jahre a
 <li>Milch</li>
 <li>Kakaopulver</li>
 </ul>
+  <script src="script.js"></script>
 </body>
 </html>
